Add more logging around GitVisibleChangeFilter and remove possible duplicates
GitVisibleChangeFilter throws when building ImmutableMap<Change.Id,
ChangeData>, because it finds duplicate Change.Ids.  I was unsuccessful
reproducing the issue, but it seams that the only code path that returns
non-Set Change.Ids is SearchingChangeCacheImpl, that in turn reads the
data from change index.  To confirm the theory, I added more logging and
de-duplicated change data to mitigate the issue.

Change-Id: If006e36069e58ad7862aea826eb26f020ba7f5df
Google-Bug-Id: b/256137965
Release-Notes: skip